--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                   <li>1 cup boiling water</li> 
                </ul> 
                <figure class="figure">
-                <img src="C:\Users\LENOVO\Downloads\cake.jpg" class="figure-img img-fluid rounded" alt="...">
+               <img src= "cake.jpg" alt="...">
               </figure>
                <h2>Instructions:</h2>
                 <li>Preheat your oven to 350°F (180°C). Grease and flour two 9-inch round cake pans.</li>
